# DIPs

./: .gitignore  README.md  template.md
.github/: dependabot.yml  replace.py
.github/workflows/: pages.yml
DIPs/: dip-0.md  dip-1.md  dip-2.md  dip-3.md  dip-4.md  dip-5.md  dip-6.md  dip-7.md  dip-8.md
website/: DIPs  conf.py  index.rst  pyproject.toml
