[tool.poetry]
name = "dips"
version = "0.1.0"
description = ""
authors = ["Xavier Lau <xavier@inv.cafe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.group.dev.dependencies]
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
