[tool.poetry]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = ""
name        = "dips"
version     = "0.1.0"

[tool.poetry.dependencies]
Sphinx                     = "^7.2.6"
furo                       = "^2023.9.10"
myst-parser                = "^2.0.0"
python                     = "^3.11"
sphinx-autobuild           = "^2021.3.14"
sphinx-last-updated-by-git = "^0.3.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
